--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,20 +1,20 @@
 <ion-header>
   <ion-navbar color="primary">
-    <button ion-button menuToggle>
+    <!-- <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
-    </button>
+    </button> -->
     <ion-title>
       <img src="assets/logo-completo.png" style="height:40px">
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content no-padding>
   <div *ngIf="api.sites.length > 0">
     <ion-grid>
       <ion-row responsive-sm>
         <ion-col col-xl-2 col-lg-2 col-md-4 col-sm-12 col-xs-12 no-padding>
-          <ion-card style="min-height:80vh">
+          <div style="min-height: calc(100vh - 70px)" no-margin>
             <ion-list>
               <button ion-item [ngClass]="{'selected': selected == site }" (click)="selectSite(site)" class="site-item" *ngFor="let site of api.sites">
                 <ion-avatar item-left>
@@ -28,11 +28,11 @@
                 </ion-note>
               </button>
             </ion-list>
-          </ion-card>
+          </div>
         </ion-col>
 
 
-        <ion-col col-xl-10 col-lg-10 col-md-8 col-sm-12 col-xs-12 no-padding>
+        <!-- <ion-col col-xl-10 col-lg-10 col-md-8 col-sm-12 col-xs-12 no-padding>
           <ion-row>
             <ion-col col-sm-6 col-md-3 col-lg-3 col-xl-3 no-padding>
               <ion-card color="primary">
@@ -71,9 +71,12 @@
               <canvas id="myChart2"></canvas>
             </ion-col>
           </ion-row>
+        </ion-col> -->
+
+
+        <ion-col col-xl-10 col-lg-10 col-md-8 col-sm-12 col-xs-12 no-padding *ngIf="selected">
+          <iframe [src]="selected._url" frameborder="0" style="width: 100%; height: calc(100vh - 70px)"></iframe>
         </ion-col>
-
-
       </ion-row>
     </ion-grid>
   </div>
